# Visual-Inertial-Odometry

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: run-unit-test-and-upload-codecov.yml
app/: CMakeLists.txt  main.cpp  main_io.cpp  main_vo.cpp
docs/html/: CONTRIBUTING_8md.html  README_8md.html  actions_8md.html  advanced_8md.html  annotated.html  app_2main_8cpp.html  app_2main_8cpp__incl.dot  app_2main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.dot  assertions_8md.html  build_2__deps_2googletest-src_2README_8md.html  build_2__deps_2googletest-src_2googlemock_2README_8md.html  build_2__deps_2googletest-src_2googlemock_2docs_2README_8md.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2custom_2README_8md.html  build_2__deps_2googletest-src_2googletest_2README_8md.html  build_2__deps_2googletest-src_2googletest_2docs_2README_8md.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2custom_2README_8md.html  classBarEnvironment-members.html  classBarEnvironment.html  classBarEnvironment__coll__graph.dot  classBase-members.html  classBase.html  classBase__coll__graph.dot  classBase__inherit__graph.dot  classBase_a1d5f3fb92f8cbc687705785bdc6abd18_icgraph.dot  classBase_a779fd2b157ebd763b15383d96047e07c_icgraph.dot  classBiggestIntConvertible-members.html  classBiggestIntConvertible.html  classChildClassWithStreamOperator.html  (+4460 more)
indoor_forward_9_davis_with_gt/: compare_output_vo.py  images.txt  output_io.txt  output_vo.txt
libs/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp  test.cpp
(+216 files in other folders)
